# PawnIoModuleCpp

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-GPL-2.0.txt  LICENSE-MPL-2.0.txt  PawnIoModule.cpp  README.md  README_en.md  THIRD-PARTY-NOTICES.md
Example/: IntelMsrReader.cpp  main.cpp
cmake/: PawnIoModuleConfig.cmake.in
docs/: ARCHITECTURE.md  PROJECT_STRUCTURE.md  QUICKSTART.md
examples/: main.cpp
include/: IntelMsrReader.h  PawnIoModule.h
src/: IntelMsrReader.cpp
tests/: diagnose.cpp  test_msr.cpp  test_pawnio.cpp
